fixtures/error/createSong_failure.js
module.exports = {
    statusCode: 500,
    detail: 'Song creation failed'
  };
  